--- a/src/main/resources/archetype-resources/src/main/webapp/index.xhtml
+++ b/src/main/resources/archetype-resources/src/main/webapp/index.xhtml
@@ -13,7 +13,7 @@
 
     <ui:define name="title">
         <h2 class="align-center">
-            Welcome to the <span class="text-aqua"> <i><a href="https://github.com/adminfaces/${artifactId}-persistence"
+            Welcome to the <span class="text-aqua"> <i><a href="https://github.com/adminfaces/admin-starter-persistence"
                                                           target="_blank"
                                                           style="text-transform: none;text-decoration: none"> AdminFaces Starter</a></i></span> Project!
             <br/>
