--- a/src/main/resources/archetype-resources/src/main/webapp/car-list.xhtml
+++ b/src/main/resources/archetype-resources/src/main/webapp/car-list.xhtml
@@ -8,7 +8,8 @@
                 xmlns:adm="http://github.com/adminfaces"
                 template="${symbol_pound}{layoutMB.template}">
 
-    <ui:define name="head-end">
+    <ui:define name="metadata">
+        <ui:param name="title" value="Car listing"/> <!-- Automatic create breadCrumb and page title when param 'title' is provided. -->
         <style type="text/css">
             .ui-datatable .ui-datatable-header {
                 text-align: right !important;
@@ -34,11 +35,6 @@
             }
 
         </style>
-    </ui:define>
-  
-  
-  <ui:define name="body-begin">
-        <ui:param name="title" value="Car listing"/> <!-- Automatic create breadCrumb and page title when param 'title' is provided. --> 
     </ui:define>
 
     <ui:define name="description">
