--- a/src/main/resources/archetype-resources/src/main/webapp/car-list.xhtml
+++ b/src/main/resources/archetype-resources/src/main/webapp/car-list.xhtml
@@ -162,7 +162,7 @@
         </h:form>
 
 
-        <p:dialog header="Search cars" widgetVar="searchDialog" height="400" modal="true" appendTo="@(body)"
+        <p:dialog header="Search cars" widgetVar="searchDialog" dynamic="true" height="400" modal="true" appendTo="@(body)"
                   width="500" responsive="true" draggable="false" styleClass="box-success">
 
             <h:form>
