--- a/src/main/resources/archetype-resources/src/main/webapp/index.xhtml
+++ b/src/main/resources/archetype-resources/src/main/webapp/index.xhtml
@@ -15,7 +15,7 @@
         <h2 class="align-center">
             Welcome to the <span class="text-aqua"> <i><a href="https://github.com/adminfaces/admin-starter-persistence"
                                                           target="_blank"
-                                                          style="text-transform: none;text-decoration: none"> AdminFaces Starter</a></i></span> Project!
+                                                          style="text-transform: none;text-decoration: none"> AdminFaces Starter Persistence</a></i></span> Project!
             <br/>
             <small>Integrating <p:link value="Primefaces" href="http://primefaces.org"/>, <p:link value="Bootstrap"
                                                                                                   href="http://getbootstrap.com/"/> and
