updates maven archetype

--- a/src/main/resources/archetype-resources/src/main/webapp/car-form.xhtml
+++ b/src/main/resources/archetype-resources/src/main/webapp/car-form.xhtml
@@ -112,6 +112,7 @@
                         </div>
                     </div>
                 </div>
+            </div>  
 
                 <p:confirmDialog global="true" showEffect="fade" hideEffect="fade" styleClass="box-danger box-solid">
                     <p:commandButton value="Yes" type="button" styleClass="btn-material btn-primary ui-confirmdialog-yes"
